# lightshow_dash

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  Dockerfile.web  GAUTH.md  app.py  banner.md  check_time.py  docker-compose.yml  fpp_volume_adjust.sh  gunicorn.sh  nginx.conf  ngrok.sh  playlist.json  pyproject.toml  requirements.txt  run.sh  rxconfig.py  songs.json  start_reflex.sh  system_songs.py
app/: admin_page.py  app.py  index_page.py  page_admin.py  page_index.py  page_login.py
backend/: dependencies.py  main.py
backend/routers/: admin.py  auth.py  songs.py
backend/utils/: fpp_commands.py  jwt_utils.py  oauth_utils.py  queueing.py  redis_client.py
frontend/: index.html
frontend/src/: App.jsx  styles.css
frontend/src/components/: ProtectedRoute.jsx  SongSelector.jsx  Toast.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Admin.jsx  Home.jsx  Login.jsx  OAuthCallback.jsx
frontend/src/services/: api.js
templates/: index.html
utils/: gauth.py  queueing.py  system_songs.py  ui_components.py
