[project]
name = "lightshow-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "bcrypt>=4.2.1",
    "fastapi==0.121.1",
    "google-auth==2.41.1",
    "google-auth-oauthlib==1.2.3",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "python-multipart==0.0.20",
    "redis>=5.2.1",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "uvicorn[standard]==0.34.0",
]
